--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -6,11 +6,11 @@
 
 
     <com.dbb.camera2view.Camera2GLSurfaceView
-        android:layout_marginTop="20dp"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="200dp"
         android:id="@+id/camera_view"
         android:layout_width="1920px"
-        android:layout_height="1080px" />
+        android:layout_height="384px" />
 
     <LinearLayout
         android:layout_width="match_parent"
